--- a/src/main/resources/hi/vidmot/customer-view.fxml
+++ b/src/main/resources/hi/vidmot/customer-view.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="300.0" prefWidth="480.0" xmlns="http://javafx.com/javafx/11"
-            xmlns:fx="http://javafx.com/fxml/1">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0"
+            prefWidth="480.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
     <header>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
             <children>
@@ -27,8 +26,7 @@
                         <TextField fx:id="fxAddress" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
                     </children>
                 </GridPane>
-                <Label layoutX="39.0" layoutY="69.0"
-                       text="Please type in name and address to make an account">
+                <Label layoutX="83.0" layoutY="71.0" text="Please type in name and address to make an account">
                     <font>
                         <Font size="14.0"/>
                     </font>
@@ -41,7 +39,4 @@
     </content>
     <ButtonType fx:id="fxOK" buttonData="OK_DONE" text="OK"/>
     <ButtonType fx:id="fxCancel" buttonData="CANCEL_CLOSE" text="Cancel"/>
-    <expandableContent>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0"/>
-    </expandableContent>
 </DialogPane>
