--- a/src/main/resources/hi/vidmot/ordering-view.fxml
+++ b/src/main/resources/hi/vidmot/ordering-view.fxml
@@ -24,6 +24,6 @@
         <Button layoutX="166.0" layoutY="352.0" mnemonicParsing="false" onAction="#removeFromBasket"
                 text="Remove from basket"/>
         <Button fx:id="fxPayButton" layoutX="389.0" layoutY="338.0" mnemonicParsing="false"
-                onAction="#pay" prefHeight="26.0" prefWidth="150.0" text="Pay up bitch"/>
+                onAction="#pay" prefHeight="26.0" prefWidth="150.0" text="Pay"/>
     </children>
 </AnchorPane>
