--- a/src/main/resources/hi/vidmot/transaction-view.fxml
+++ b/src/main/resources/hi/vidmot/transaction-view.fxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.*?>
 <AnchorPane prefHeight="400.0" prefWidth="650.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/11"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="hi.vidmot.TransactionController">
     <children>
@@ -13,7 +14,27 @@
                   styleClass="listview"/>
         <TextField fx:id="fxTotalPrice" layoutX="318.0" layoutY="287.0" text="Total price:"/>
         <Label layoutX="357.0" layoutY="42.0" text="Your basket"/>
-        <Label fx:id="fxDeliveryInformation" layoutX="29.0" layoutY="133.0" prefHeight="154.0" prefWidth="200.0"
-               wrapText="true"/>
+        <GridPane layoutX="57.0" layoutY="133.0" style="-fx-border-color: #f2bdb1;">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="63.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="137.0" minWidth="10.0" prefWidth="137.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </padding>
+            <children>
+                <Label text="Name: "/>
+                <Label text="Address:" GridPane.rowIndex="1"/>
+                <Label text="ETA: " GridPane.rowIndex="2"/>
+                <Label fx:id="fxName" GridPane.columnIndex="1"/>
+                <Label fx:id="fxAddress" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <Label fx:id="fxETA" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+            </children>
+        </GridPane>
     </children>
 </AnchorPane>
